Added sign in/ sign out code. Removed Add new button from ViewDidAppear.

--- a/KeepKaizen/Podfile
+++ b/KeepKaizen/Podfile
@@ -12,5 +12,6 @@ target 'KeepKaizen' do
   pod 'Firebase/Database'
   pod 'Firebase/Auth'
   pod 'TextFieldEffects'
+  pod 'SwiftKeychainWrapper'
 
 end
